internal/app/playbooks/role/catalogs/SampleCode/Spring_Cloud_GW/files/gateway-api-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-demo-api-svc
  namespace: gateway
spec:
  selector:
    app: gateway-demo-api
  ports:
  - protocol: TCP
    name: http
    port: 8080
    targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-demo-api-deploy
  namespace: gateway    
  labels:
    app: gateway-demo-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway-demo-api
  template:
    metadata:
      labels:
        app: gateway-demo-api     
    spec:
      containers:
        - name: gateway-demo-api
          image: oscka/gateway-demo-api:v0.1
          ports:
          - name: http
            containerPort: 8080
