internal/app/playbooks/role/catalogs/SampleCode/Spring_Cloud_GW/files/gateway-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-demo-api-ingress
  namespace: gateway
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: gateway-api.cnstudio.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service: 
            name: gateway-demo-api-svc
            port: 
              number: 8080
